--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,4 @@
-/target/
-!.mvn/wrapper/maven-wrapper.jar
 
-### STS ###
+### ECLIPSE ###
 /RemoteSystemsTempFiles/
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
 .metadata
-
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
-
-### NetBeans ###
-/nbproject/private/
-/build/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
